<resources>
    <string name="app_name">MoneyTrackApp</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="user">User</string>
    <string name="save">Save</string>
    <string name="delete_photo">DELETE PHOTO</string>
    <string name="guest">Guest</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="menu">Menu</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="username">username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="go_back">Go Back</string>
    <string name="add_wallet">Add New Wallet</string>
    <string name="my_wallets">My Wallets</string>
    <string name="wallet_name">Wallet Name (e.g., ShopeePay, BCA, Cash)</string>
    <string name="category_hint">Category (e.g., E-wallet, Bank Account, Cash)</string>
    <string name="amount_hint">Amount (e.g., 200000)</string>
    <string name="wallet_title">Shopeepay</string>
    <string name="cancel">cancel</string>
    <string name="no_wallet_yet">No Wallet Yet</string>
    <string name="edit_wallet">Edit Wallet</string>
    <string name="failed_to_load_wallets">Failed to load wallets. Please check your internet connection or try again later.</string>
    <string name="delete">delete</string>
    <string name="download">Download</string>
    <string name="delete_confirmation_title">Confirm Deletion</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="delete_photo_message">Are you sure you want to delete your profile picture?</string>
</resources>