<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
    android:id="@+id/dialog_delete_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete_confirmation_title"
    android:textColor="@color/purple_700"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/dialog_delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation_message"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btn_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/rounded_orange_button"
            android:layout_marginEnd="8dp"
            android:minHeight="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <Button
            android:id="@+id/btn_delete_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/rounded_red_button"
            android:minHeight="32dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>
</LinearLayout>