<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="#000878"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/menu" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/def_profile_img"
        app:civ_border_color="@color/purple_700"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_profile_picture"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/profile_picture_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/upload_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_delete_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/rounded_red_button"
            android:textSize="12sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:minHeight="32dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_download_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transaction_container"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:minHeight="32dp" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp" android:layout_marginEnd="40dp"
        android:hint="@string/username"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture_actions"> <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_orange_button"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>